<resources>
    <string name="app_name" translatable="false">DrinkWater</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Drink Water Reminder</string>
    <string name="nav_header_subtitle" translatable="false">Keep track, keep fit.</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="a">Navigate home</string>
    <string name="b">%1$s, %2$s</string>
    <string name="c">%1$s, %2$s, %3$s</string>
    <string name="d">Navigate up</string>
    <string name="e">More options</string>
    <string name="f">Done</string>
    <string name="g">See all</string>
    <string name="h">Choose an app</string>
    <string name="i">OFF</string>
    <string name="j">ON</string>
    <string name="k" translatable="false">sans-serif</string>
    <string name="l" translatable="false">sans-serif-medium</string>
    <string name="m" translatable="false">sans-serif-medium</string>
    <string name="n" translatable="false">sans-serif</string>
    <string name="o" translatable="false">sans-serif</string>
    <string name="p" translatable="false">sans-serif</string>
    <string name="q" translatable="false">sans-serif</string>
    <string name="r" translatable="false">sans-serif-light</string>
    <string name="s" translatable="false">sans-serif</string>
    <string name="t" translatable="false">sans-serif</string>
    <string name="u" translatable="false">sans-serif</string>
    <string name="v" translatable="false">sans-serif-medium</string>
    <string name="w">Search…</string>
    <string name="x">Clear query</string>
    <string name="y">Search query</string>
    <string name="z">Search</string>
    <string name="a0">Submit query</string>
    <string name="a1">Voice search</string>
    <string name="a2">Share with</string>
    <string name="a3">Share with %s</string>
    <string name="a4">Collapse</string>
    <string name="a5" translatable="false">Add apps</string>
    <string name="a6">Adjust intake goal</string>
    <string name="a7" translatable="false">and tap</string>
    <string name="a8">Drink Water Reminder</string>
    <string name="a9" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="a_" translatable="false">Athletic</string>
    <string name="aa">Auto</string>
    <string name="ab">Average completion</string>
    <string name="ac">%d%%</string>
    <string name="ad" translatable="false">/6499/example/banner</string>
    <string name="ae" translatable="false">android.support.design.widget.BottomSheetBehavior</string>
    <string name="af" translatable="false">Bravo! Let\'s start!</string>
    <string name="ag">CANCEL</string>
    <string name="ah" translatable="false">%1$d / %2$d</string>
    <string name="ai" translatable="false">Classic</string>
    <string name="aj" translatable="false">Close</string>
    <string name="ak" translatable="false">Cold</string>
    <string name="al" translatable="false">:</string>
    <string name="am">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="an">Unexpected error while downloading an image.</string>
    <string name="ao">WebView login requires INTERNET permission</string>
    <string name="ap">AndroidManifest Error</string>
    <string name="aq">Liked</string>
    <string name="ar">Like</string>
    <string name="as">Loading…</string>
    <string name="at">Cancel</string>
    <string name="au">Log in</string>
    <string name="av">Continue with Facebook</string>
    <string name="aw">Log in with Facebook</string>
    <string name="ax">Log out</string>
    <string name="ay">Log out</string>
    <string name="az">Logged in as: %1$s</string>
    <string name="b0">Logged in using Facebook</string>
    <string name="b1">Send</string>
    <string name="b2">Share</string>
    <string name="b3">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="b4">- OR -</string>
    <string name="b5">Not you?</string>
    <string name="b6" translatable="false">Continue as %1$s</string>
    <string name="b7">Confirm Login</string>
    <string name="b8">You\'re in control - choose what info you want to share with apps.</string>
    <string name="b9">Enable</string>
    <string name="b_">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="ba">Enable Google Play services</string>
    <string name="bb">Install</string>
    <string name="bc">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="bd">Get Google Play services</string>
    <string name="be">Google Play services availability</string>
    <string name="bf">Google Play services error</string>
    <string name="bg">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="bh">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="bi">Update</string>
    <string name="bj">%1$s won\'t run unless you update Google Play services.</string>
    <string name="bk">Update Google Play services</string>
    <string name="bl">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="bm">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="bn">Open on phone</string>
    <string name="bo">Sign in</string>
    <string name="bp">Sign in with Google</string>
    <string name="bq">Customize</string>
    <string name="br">Customize your drinking cup</string>
    <string name="bs">Daily Drink Target</string>
    <string name="bt" translatable="false">Daily intake</string>
    <string name="bu">Daily Target</string>
    <string name="bv" translatable="false">H5Game</string>
    <string name="bw">Delete</string>
    <string name="bx" translatable="false">Dismiss</string>
    <string name="by" translatable="false">Done</string>
    <string name="bz" translatable="false">Download</string>
    <string name="c0">DRINK</string>
    <string name="c1">Drink frequency</string>
    <string name="c2">Remember to Drink Later.</string>
    <string name="c3">Drink Water</string>
    <string name="c4">Drink water report</string>
    <string name="c5">Edit</string>
    <string name="c6" translatable="false">every time</string>
    <string name="facebook_app_id" translatable="false">923071751189490</string>
    <string name="c7">FAQ</string>
    <string name="c8">Sometimes %%s does not ring at the scheduled time, because of cleaner apps or phone system shut off %%s.\n\nIf you have installed cleaner apps such as CM Security, please make sure that they do not to stop %%s.\n\nSome devices, especially Samsung, have strict power plans, the system will shut off %%s after locking your screen. We suggest you add %%s to the Unmonitored Apps list to avoid missing reminders.</string>
    <string name="c9">We are a small team that want to provide a better experience for users. Advertisements are the only source of income to keep team operating. The free version include ads, which we try our best not to bother users with.\n\nThe premium version (without ads) will be coming soon. Thank you for your support.</string>
    <string name="c_">We do not use any abnormal method to prevent our app been uninstalled from your devices.\n\nIf you insist to uninstall %s (we will miss you), please go to system settings and check Prevent app uninstall is turned off, and then go to the app list, click the uninstall button. Wish happiness and good health :-)</string>
    <string name="ca" translatable="false">GO TO SETTINGS</string>
    <string name="cb">Why does %s not work?</string>
    <string name="cc">Why does %s show advertisements?</string>
    <string name="cd">I can\'t uninstall this app, what happened?</string>
    <string name="ce">Miscellaneous</string>
    <string name="female">Female</string>
    <string name="cg" translatable="false">Please enter your basic information, and we\'ll customize drink water plan for you.</string>
    <string name="ch" translatable="false">Female</string>
    <string name="ci" translatable="false">Gender</string>
    <string name="cj" translatable="false">Male</string>
    <string name="ck" translatable="false">We sincerely hope that you can spend a few minutes on this survey, and we definitely value your opinions!</string>
    <string name="cl" translatable="false">fl oz</string>
    <string name="cm">Fri</string>
    <string name="cn">You\'ve achieved your intake goal! Do you still want to receive reminders after achieving the goal?</string>
    <string name="co">Congratulations!</string>
    <string name="cp">Further reminder</string>
    <string name="cq">Still remind after achieving the goal</string>
    <string name="cr" translatable="false">Loading …</string>
    <string name="cs" translatable="false">Nice game is about to start!</string>
    <string name="ct" translatable="false">Wanna take a break?Let\'s play some instant games!</string>
    <string name="cu" translatable="false">Cancel</string>
    <string name="cv" translatable="false">Are you sure to quit?</string>
    <string name="cw" translatable="false">Quit</string>
    <string name="cx" translatable="false">Wanna take a break?Let\'s drive the car!</string>
    <string name="cy" translatable="false">Unstable Internet connection. Please try again later.</string>
    <string name="cz" translatable="false">Wanna take a break?Let\'s eliminate the stone!</string>
    <string name="d0" translatable="false">{percent}%\nLoaded</string>
    <string name="d1" translatable="false">Miscellaneous</string>
    <string name="d2" translatable="false">Yes, I agree</string>
    <string name="d3" translatable="false">CONTINUE</string>
    <string name="d4" translatable="false">No, thank you</string>
    <string name="d5" translatable="false">READ</string>
    <string name="da">Gender</string>
    <string name="db">General</string>
    <string name="dl">How much should you drink</string>
    <string name="ds">History</string>
    <string name="e0">Intake goal</string>
    <string name="male">Male</string>
    <string name="ep">Mute</string>
    <string name="ev">No</string>
    <string name="fc">Personal data</string>
    <string name="fh">Privacy Policy</string>
    <string name="fp">Rate us</string>
    <string name="fs">Reminder alert</string>
    <string name="ft">Remind you when you unlock the phone</string>
    <string name="fu">Reminder interval</string>
    <string name="fw">Reminder mode</string>
    <string name="fx">Reminder settings</string>
    <string name="fy">Remove ads</string>
    <string name="gk">Setting</string>
    <string name="gn">Language</string>
    <string name="sleep_time">Sleep time</string>
    <string name="gu">Start off with a glass of water to fire up your metabolism!</string>
    <string name="h6">Terms of Service</string>
    <string name="hf">It\'s time to DRINK!</string>
    <string name="hy">Turn Off</string>
    <string name="i0">Unit</string>
    <string name="get_up_time">Wake up time</string>
    <string name="iff">Weight</string>
    <string name="ij">Yes</string>
</resources>