<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_round_corner_white_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/co"
        android:textAppearance="@style/TextAppearance.AppTheme.Large"
        android:textColor="@color/colorTextBlack" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/cn"
        android:textAppearance="@style/TextAppearance.AppTheme"
        android:textColor="@color/colorTextLightGray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#ffcccccc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/ev"
            android:textAppearance="@style/TextAppearance.AppTheme"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="#ffcccccc" />

        <TextView
            android:id="@+id/tv_yes"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/ij"
            android:textAppearance="@style/TextAppearance.AppTheme"
            android:textColor="@color/colorAccent" />
    </LinearLayout>


</LinearLayout>
