<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingTop="24dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tv_mode_off"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?selectableItemBackground"
        android:drawableTop="@drawable/ic_mode_off_off"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/hy"
        android:textColor="@color/ab" />

    <TextView
        android:id="@+id/tv_mode_mute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?selectableItemBackground"
        android:drawableTop="@drawable/ic_mode_mute_off"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/ep"
        android:textColor="@color/ab" />

    <TextView
        android:id="@+id/tv_mode_auto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?selectableItemBackground"
        android:drawableTop="@drawable/ic_mode_auto_off"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/aa"
        android:textColor="@color/ab" />
</LinearLayout>