<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_view_content_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="24dp"
    android:background="@drawable/shape_round_corner_white_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/hf"
        android:textAppearance="@style/TextAppearance.AppTheme.Large"
        android:textColor="@color/colorTextBlack"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:drawableStart="@drawable/water_thirsty"
        android:drawableLeft="@drawable/water_thirsty"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="@string/gu"
        android:textColor="@color/colorTextLightGray" />

    <Button
        android:id="@+id/btn_drink"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_primary_btn_bg"
        android:text="@string/c0"
        android:textColor="@android:color/white" />

</LinearLayout>
